z-index fixes

--- a/src/app/components/game/board-management/board-management.component.scss
+++ b/src/app/components/game/board-management/board-management.component.scss
@@ -2,8 +2,6 @@
 
 .option-list {
   height: 100%;
-  position: fixed;
-  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
