--- a/src/app/components/game/jigsaw-canvas/jigsaw-canvas.component.scss
+++ b/src/app/components/game/jigsaw-canvas/jigsaw-canvas.component.scss
@@ -8,11 +8,11 @@
 
 .image {
   display: none;
-  position: absolute;
+  position: fixed;
+  z-index: 1;
   max-width: 75%;
   max-height: 75%;
   top: 25px;
   left: 85px;
-  z-index: 1;
   filter: drop-shadow(0 0 1rem library.$dark);
 }
