--- a/src/app/components/shared/transition/transition.component.scss
+++ b/src/app/components/shared/transition/transition.component.scss
@@ -2,6 +2,7 @@
 
 .loading {
   position: absolute;
+  z-index: 10;
   width: 100%;
   height: 100%;
   top: 0;
